internal/postiz/base/redis/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postiz-redis
  labels:
    app.kubernetes.io/name: postiz-redis
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: postiz
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: postiz-redis
      app.kubernetes.io/component: redis
  serviceName: postiz-redis-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postiz-redis
        app.kubernetes.io/instance: postiz
        app.kubernetes.io/component: redis
        app.kubernetes.io/part-of: postiz
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
      serviceAccountName: postiz-redis
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: redis:8.2-alpine
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 192Mi
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: empty-dir
              mountPath: /opt/bitnami/redis/etc/
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: start-scripts
          configMap:
            name: postiz-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: postiz-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: postiz-redis-configuration
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
