internal/postiz/base/redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postiz-redis-headless
  labels:
    app.kubernetes.io/name: postiz-redis
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: postiz
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: postiz-redis
    app.kubernetes.io/component: redis
---
apiVersion: v1
kind: Service
metadata:
  name: postiz-redis
  labels:
    app.kubernetes.io/name: postiz-redis
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: postiz
spec:
  type: ClusterIP
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: postiz-redis
    app.kubernetes.io/component: redis
